# sudoku-api

./: .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.debugServer  Procfile  README.md  app.py  pyproject.toml  railway.json  requirements.txt  run.py  schema.graphql  test.html
docs/: improvements.md  levels.md  monetization.md  production.md  updated.md
migrations/: 001_initial.sql  001_users_and_progress.sql  add_date_assigned.sql
sudoku_api/: __init__.py  api_docs.html  api_models.py  auth.py  config.py  database.py  enums.py  graphql_schema.py  improved_difficulty.py  middleware.py  monitoring.py  routes.py  server.py  sudoku_board.py  sudoku_game.py  sudoku_game_optimazed.py  sudoku_generator.py  sudoku_solver.py  sudoku_solver_optimized.py  validator.py
sudoku_api/resources/: __init__.py  daily.py  game.py  health.py  solve.py  stats.py  user.py  validate.py
tests/: test_api.py  test_sudoku_api.py  test_validator.py
